ASM-976: Remaining unit test failures fixed