@@ -5,6 +5,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import co.elastic.clients.elasticsearch.core.search.Hit;
 import java.util.Map;
 import java.util.List;
+import java.util.HashMap;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import uk.gov.companieshouse.reconciliation.model.ResultModel;
@@ -20,7 +21,7 @@ class ElasticsearchPrimaryIndexResultMapperTest {
     @Test
     void testMapSearchHitIntoResultModel() {
         //given
-        Hit<Object> hit = Hit.of(b -> b.id("12345678").source(Map.of(
+        Hit<Object> hit = Hit.of(b -> b.id("12345678").index("test-index").source(Map.of(
             "items", List.of(Map.of(
                 "corporate_name_start", "ACME",
                 "corporate_name_ending", " LIMITED",
@@ -36,7 +37,7 @@ class ElasticsearchPrimaryIndexResultMapperTest {
     @Test
     void testMapSearchHitWithoutSourceFields() {
         //given
-        Hit<Object> hit = Hit.of(b -> b.id("12345678").source(Map.of()));
+        Hit<Object> hit = Hit.of(b -> b.id("12345678").index("test-index").source(Map.of()));
         //when
         ResultModel actual = mapper.mapExcludingSourceFields(hit);
         //then
@@ -46,13 +47,13 @@ class ElasticsearchPrimaryIndexResultMapperTest {
     @Test
     void testMapSearchHitReplaceNullValuesWithEmptyStrings() {
         //given
-        Hit<Object> hit = Hit.of(b -> b.id("12345678").source(Map.of(
-            "items", List.of(Map.of(
-                "corporate_name_start", null,
-                "corporate_name_ending", null,
-                "company_status", null
-            ))
-        )));
+        Map<String, Object> item = new HashMap<>();
+        item.put("corporate_name_start", null);
+        item.put("corporate_name_ending", null);
+        item.put("company_status", null);
+        Map<String, Object> source = new HashMap<>();
+        source.put("items", java.util.Collections.singletonList(item));
+        Hit<Object> hit = Hit.of(b -> b.id("12345678").index("test-index").source(source));
         //when
         ResultModel actual = mapper.mapWithSourceFields(hit);
         //then
@@ -62,7 +63,7 @@ class ElasticsearchPrimaryIndexResultMapperTest {
     @Test
     void testMapSearchHitHandleEmptyItemsArray() {
         //given
-        Hit<Object> hit = Hit.of(b -> b.id("12345678").source(Map.of(
+        Hit<Object> hit = Hit.of(b -> b.id("12345678").index("test-index").source(Map.of(
             "items", List.of()
         )));
         //when
@@ -74,9 +75,9 @@ class ElasticsearchPrimaryIndexResultMapperTest {
     @Test
     void testMapSearchHitHandleNullItems() {
         //given
-        Hit<Object> hit = Hit.of(b -> b.id("12345678").source(Map.of(
-            "items", null
-        )));
+        Map<String, Object> source = new HashMap<>();
+        source.put("items", null);
+        Hit<Object> hit = Hit.of(b -> b.id("12345678").index("test-index").source(source));
         //when
         ResultModel actual = mapper.mapWithSourceFields(hit);
         //then
@@ -86,7 +87,7 @@ class ElasticsearchPrimaryIndexResultMapperTest {
     @Test
     void testMapSearchHitNoSpaceBetweenNameStartAndNameEnding() {
         //given
-        Hit<Object> hit = Hit.of(b -> b.id("12345678").source(Map.of(
+        Hit<Object> hit = Hit.of(b -> b.id("12345678").index("test-index").source(Map.of(
             "items", List.of(Map.of(
                 "corporate_name_start", "ACME",
                 "corporate_name_ending", "LIMITED",
@@ -102,7 +103,7 @@ class ElasticsearchPrimaryIndexResultMapperTest {
     @Test
     void testMapSearchHitNameEndingAbsent() {
         //given
-        Hit<Object> hit = Hit.of(b -> b.id("12345678").source(Map.of(
+        Hit<Object> hit = Hit.of(b -> b.id("12345678").index("test-index").source(Map.of(
             "items", List.of(Map.of(
                 "corporate_name_start", "ACME",
                 "corporate_name_ending", "",
@@ -118,7 +119,7 @@ class ElasticsearchPrimaryIndexResultMapperTest {
     @Test
     void testMapSearchHitNameStartAbsent() {
         //given
-        Hit<Object> hit = Hit.of(b -> b.id("12345678").source(Map.of(
+        Hit<Object> hit = Hit.of(b -> b.id("12345678").index("test-index").source(Map.of(
             "items", List.of(Map.of(
                 "corporate_name_start", "",
                 "corporate_name_ending", " LIMITED",
@@ -134,7 +135,7 @@ class ElasticsearchPrimaryIndexResultMapperTest {
     @Test
     void testMapSearchHitWithWhitespaceOnCompanyStatus() {
         //given
-        Hit<Object> hit = Hit.of(b -> b.id("12345678").source(Map.of(
+        Hit<Object> hit = Hit.of(b -> b.id("12345678").index("test-index").source(Map.of(
             "items", List.of(Map.of(
                 "corporate_name_start", "",
                 "corporate_name_ending", " LIMITED",
@@ -145,5 +146,56 @@ class ElasticsearchPrimaryIndexResultMapperTest {
         ResultModel actual = mapper.mapWithSourceFields(hit);
         //then
         assertEquals(new ResultModel("12345678", "LIMITED", "active"), actual);
+    }
+
+    @SuppressWarnings("DataFlowIssue")
+    @Test
+    void testMapSearchHitWithNullCorporateNameStart() {
+        //given
+        Map<String, Object> item = new HashMap<>();
+        item.put("corporate_name_start", null);
+        item.put("corporate_name_ending", " LIMITED");
+        item.put("company_status", "active");
+        Map<String, Object> source = new HashMap<>();
+        source.put("items", java.util.Collections.singletonList(item));
+        Hit<Object> hit = Hit.of(b -> b.id("12345678").index("test-index").source(source));
+        //when
+        ResultModel actual = mapper.mapWithSourceFields(hit);
+        //then
+        assertEquals(new ResultModel("12345678", "LIMITED", "active"), actual);
+    }
+
+    @SuppressWarnings("DataFlowIssue")
+    @Test
+    void testMapSearchHitWithNullCorporateNameEnding() {
+        //given
+        Map<String, Object> item = new HashMap<>();
+        item.put("corporate_name_start", "ACME");
+        item.put("corporate_name_ending", null);
+        item.put("company_status", "active");
+        Map<String, Object> source = new HashMap<>();
+        source.put("items", java.util.Collections.singletonList(item));
+        Hit<Object> hit = Hit.of(b -> b.id("12345678").index("test-index").source(source));
+        //when
+        ResultModel actual = mapper.mapWithSourceFields(hit);
+        //then
+        assertEquals(new ResultModel("12345678", "ACME", "active"), actual);
+    }
+
+    @SuppressWarnings("DataFlowIssue")
+    @Test
+    void testMapSearchHitWithNullCompanyStatus() {
+        //given
+        Map<String, Object> item = new HashMap<>();
+        item.put("corporate_name_start", "ACME");
+        item.put("corporate_name_ending", " LIMITED");
+        item.put("company_status", null);
+        Map<String, Object> source = new HashMap<>();
+        source.put("items", java.util.Collections.singletonList(item));
+        Hit<Object> hit = Hit.of(b -> b.id("12345678").index("test-index").source(source));
+        //when
+        ResultModel actual = mapper.mapWithSourceFields(hit);
+        //then
+        assertEquals(new ResultModel("12345678", "ACME LIMITED", ""), actual);
     }
 }
